--- a/index.html
+++ b/index.html
@@ -196,7 +196,18 @@
         { key: 400, n: "കുരുമ്പേരി അബ്ദുള്ള", s: "M",ux: 401, a: [] },
         { key: 401, n: "പാത്തുമ്മ", s: "F",m: -11, f: -10, a: [] },
         
+        { key: 402, n: "മമ്മുഹാജി", s: "M",ux: 403,m:401,f:400, a: [] },
+        { key: 403, n: "മറിയം", s: "F",m:101,f:100,  a: [] },
 
+        { key: 404, n: "മൊയ്തു ഹാജി", s: "M",ux: 405,m:401,f:400, a: [] },
+        { key: 405, n: "കുഞ്ഞിപ്പാത്തു", s: "F",m:301,f:300,  a: [] },
+
+        { key: 405, n: "അന്ത്രുഹാജി", s: "M",ux: 406,m:401,f:400, a: [] },
+        { key: 406, n: "ആസ്യ", s: "F",  a: [] },
+
+        { key: 406, n: "മറിയം ഹജ്ജുമ്മ", s: "F",ux: 407,m:401,f:400, a: [] },
+        { key: 407, n: "അബൂബക്കർ ഹാജി", s: "M",  a: [] },
+        
         { key: -10, n: "പറമ്പത്ത് ഉമ്മാമ", s: "F", ux: -11, a: [] },
         { key: -11, n: "പറമ്പത്ത് ഉപ്പാപ്പ", s: "M", a: [] }
       ],
