Adding KP Family

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Parambath Family</title>
-  <meta name="description" content="A genogram is a family tree diagram for visualizing hereditary patterns." />
+  <meta name="description" content="Family tree of Parambath." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Copyright 1998-2020 by Northwoods Software Corporation. -->
 
@@ -190,8 +190,44 @@
         { key: 200, n: "KP മമ്മദ്", s: "M", m: -11, f: -10,ux: 201, a: [] },
         { key: 201, n: "ബീവി", s: "F", a: [] },
 
+        { key: 4000, n: "അബൂബക്കർ", s: "M",ux:4001,m:201,f:200, a: [] },
+        { key: 4001, n: "അയിശു", s: "F", a: [] },
+        { key: 4002, n: "മൊയ്തു", s: "M", m:4001,f:4000,a: [] },
+        { key: 4003, n: "സുലൈഖ", s: "F", m:4001,f:4000,a: [] },
+
+        { key: 5000, n: "മൊയ്തു", s: "M",ux:5001, m:201,f:200, a: [] },
+        { key: 5001, n: "അലീമ", s: "F", a: [] },
+        { key: 5002, n: "അബ്ദുള്ള", s: "M", m:5001,f:5000,a: [] },
+        { key: 5003, n: "മുഹമ്മദ്", s: "M", m:5001,f:5000,a: [] },
+        { key: 5004, n: "അബൂബക്കർ", s: "M", m:5001,f:5000,a: [] },
+        { key: 5005, n: "ഇസ്മായിൽ", s: "M", m:5001,f:5000,a: [] },
+        { key: 5006, n: "നാസർ", s: "M", m:5001,f:5000,a: [] },
+        { key: 5007, n: "സുബൈദ", s: "F", m:5001,f:5000,a: [] },
+
+        { key: 6000, n: "അബ്ദുറഹിമാൻ ഹാജി", s: "M",ux:6001,m:201,f:200, a: [] },
+        { key: 6001, n: "പാത്തു", s: "F", a: [] },
+        { key: 6002, n: "സിദ്ധീഖ്", s: "M", m:6001,f:6000,a: [] },
+        { key: 6003, n: "ഉമ്മർ", s: "M", m:6001,f:6000,a: [] },
+        { key: 6004, n: "ആസ്യ", s: "F", m:6001,f:6000,a: [] },
+        { key: 6005, n: "ജമീല", s: "F", m:6001,f:6000,a: [] },
+        { key: 6006, n: "റഹ്മത്ത്", s: "F", m:6001,f:6000,a: [] },
+
         { key: 300, n: "പറമ്പത്ത് കുഞ്ഞബ്ദുള്ള ഹാജി", s: "M", m: -11, f: -10,ux: 301, a: [] },
         { key: 301, n: "മറിയം", s: "F", a: [] },
+
+        { key: 2000, n: "അയിശു", s: "F",vir:2001,m:301,f:300,  a: [] },
+        { key: 2001, n: "അബൂബക്കർ", s: "M",  a: [] },
+        { key: 2002, n: "സലീം", s: "M",m:2000,f:2001,  a: [] },
+        { key: 2003, n: "സുലൈമാൻ", s: "M",m:2000,f:2001,  a: [] },
+        { key: 2004, n: "ഹാജറ", s: "F",m:2000,f:2001,  a: [] },
+        { key: 2005, n: "നിസ", s: "F",m:2000,f:2001,  a: [] },
+        { key: 2006, n: "ഹഫ്സത്ത്", s: "F",m:2000,f:2001,  a: [] },
+
+        { key: 3000, n: "മൊയ്തു", s: "M",ux:3001,m:301,f:300,  a: [] },
+        { key: 3001, n: "അലീമ", s: "F",  a: [] },
+
+        { key: 3002, n: "ഹാരിസ്", s: "M",m:3001,f:3000,  a: [] },
+        { key: 3003, n: "നവാസ്", s: "M",  m:3001,f:3000,a: [] },
 
         { key: 400, n: "കുരുമ്പേരി അബ്ദുള്ള", s: "M",ux: 401, a: [] },
         { key: 401, n: "പാത്തുമ്മ", s: "F",m: -11, f: -10, a: [] },
@@ -199,15 +235,37 @@
         { key: 402, n: "മമ്മുഹാജി", s: "M",ux: 403,m:401,f:400, a: [] },
         { key: 403, n: "മറിയം", s: "F",m:101,f:100,  a: [] },
 
+        { key: 800, n: "അലീമ", s: "F",m:402,f:403, a: [] },
+        { key: 801, n: "ആയിശ", s: "F",m:402,f:403,  a: [] },
+        { key: 802, n: "അൻവർ", s: "M",m:402,f:403,  a: [] },
+
         { key: 404, n: "മൊയ്തു ഹാജി", s: "M",ux: 405,m:401,f:400, a: [] },
         { key: 405, n: "കുഞ്ഞിപ്പാത്തു", s: "F",m:301,f:300,  a: [] },
 
-        { key: 405, n: "അന്ത്രുഹാജി", s: "M",ux: 406,m:401,f:400, a: [] },
-        { key: 406, n: "ആസ്യ", s: "F",  a: [] },
+        { key: 900, n: "അസീസ്", s: "M",m:405,f:404, a: [] },
+        { key: 900, n: "മുഹമ്മദ്", s: "M",m:405,f:404, a: [] },
 
-        { key: 406, n: "മറിയം ഹജ്ജുമ്മ", s: "F",ux: 407,m:401,f:400, a: [] },
-        { key: 407, n: "അബൂബക്കർ ഹാജി", s: "M",  a: [] },
+
+        { key: 409, n: "അന്ത്രുഹാജി", s: "M",ux: 410,m:401,f:400, a: [] },
+        { key: 410, n: "ആസ്യ", s: "F",  a: [] },
+
+        { key: 1000, n: "ജാഫർ", s: "M",m:410,f:409, a: [] },
+        { key: 1001, n: "സുബൈർ", s: "M",m:410,f:409, a: [] },
+        { key: 1002, n: "ഹാരിസ്", s: "M",m:410,f:409, a: [] },
+        { key: 1003, n: "ജാബിർ", s: "M",m:410,f:409, a: [] },
+        { key: 1004, n: "യാസർ", s: "M",m:410,f:409, a: [] },
+        { key: 1005, n: "ഫാത്തിമ", s: "F",m:410,f:409, a: [] },
+        { key: 1005, n: "സക്കീന", s: "F",m:410,f:409, a: [] },
+
+        { key: 407, n: "മറിയം ഹജ്ജുമ്മ", s: "F",vir: 408,m:401,f:400, a: [] },
+        { key: 408, n: "അബൂബക്കർ ഹാജി", s: "M",  a: [] },
         
+
+        { key: 700, n: "അബ്ദുള്ള", s: "M",m:407,f:408, a: [] },
+        { key: 701, n: "മുഹമ്മദ്", s: "M",m:407,f:408, a: [] },
+        { key: 702, n: "സമദ്", s: "M",m:407,f:408, a: [] },
+        { key: 703, n: "റംലത്ത്", s: "F",m:407,f:408, a: [] },        
+
         { key: -10, n: "പറമ്പത്ത് ഉമ്മാമ", s: "F", ux: -11, a: [] },
         { key: -11, n: "പറമ്പത്ത് ഉപ്പാപ്പ", s: "M", a: [] }
       ],
