Adding KP nd gen

--- a/index.html
+++ b/index.html
@@ -189,6 +189,49 @@
         { key: 100, n: "KP അമ്മദ് ഹാജി", s: "M", m: -11, f: -10,ux: 101, a: [] },
         { key: 101, n: "പാത്തു", s: "F", a: [] },
 
+        { key: 7000, n: "അന്ത്രു ഹാജി", s: "M",ux:7001,m:101,f:100, a: [] },
+        { key: 7001, n: "റഹ്മത്ത്", s: "F", a: [] },
+        { key: 7002, n: "മുഹമ്മദ്", s: "M",m:7001,f:7000 ,a: [] },
+        { key: 7003, n: "സുബൈർ", s: "M",m:7001,f:7000, a: [] },
+        { key: 7004, n: "മുനീർ", s: "M",m:7001,f:7000 ,a: [] },
+
+
+        { key: 8000, n: "അബ്ദുള്ള", s: "M",ux:8001,m:101,f:100, a: [] },
+        { key: 8001, n: "ഫൗസിയ", s: "F", a: [] },
+        { key: 8002, n: "നിസാർ", s: "M",m:8001,f:8000 ,a: [] },
+        { key: 8003, n: "നസീർ", s: "M",m:8001,f:8000 ,a: [] },
+        { key: 8004, n: "നൗഷാദ്", s: "M",m:8001,f:8000 ,a: [] },
+        { key: 8005, n: "നസീറ", s: "F",m:8001,f:8000 ,a: [] },
+        { key: 8006, n: "നവാസ്", s: "M",m:8001,f:8000 ,a: [] },
+        { key: 8007, n: "സഫീർ", s: "M",m:8001,f:8000 ,a: [] },
+
+        { key: 9000, n: "മൊയ്തു ഹാജി", s: "M",ux:9001, a: [] },
+        { key: 9001, n: "മാമി", s: "F",m:101,f:100, a: [] },
+        { key: 9002, n: "ശംസു", s: "M",m:9001,f:9000 ,a: [] },
+        { key: 9003, n: "അലി", s: "M",m:9001,f:9000 ,a: [] },
+        { key: 9004, n: "ജമീല", s: "F",m:9001,f:9000 ,a: [] },
+        { key: 9005, n: "സമീറ", s: "F",m:9001,f:9000 ,a: [] },
+
+        { key: 10000, n: "മൊയ്തു", s: "M",ux:10001, a: [] },
+        { key: 10001, n: "ബീവി", s: "F",m:101,f:100, a: [] },
+        { key: 10002, n: "മുഹമ്മദ്", s: "M",m:10001,f:10000 ,a: [] },
+        { key: 10003, n: "ആയിശ", s: "F",m:10001,f:10000 ,a: [] },
+        { key: 10004, n: "സറീന", s: "F",m:10001,f:10000 ,a: [] },
+
+        { key: 11000, n: "മൊയ്തു", s: "M",ux:11001, a: [] },
+        { key: 11001, n: "കുഞ്ഞലു", s: "F",m:101,f:100, a: [] },
+        { key: 11002, n: "റിയാസ്", s: "M",m:11001,f:11000 ,a: [] },
+        { key: 11003, n: "റഊഫ്", s: "M",m:11001,f:11000 ,a: [] },
+        { key: 11004, n: "റഹീന", s: "F",m:11001,f:11000 ,a: [] },
+
+        { key: 12000, n: "മുഹമ്മദ്", s: "M",ux:12001, a: [] },
+        { key: 12001, n: "ആസ്യ", s: "F",m:101,f:100, a: [] },
+        { key: 12002, n: "ആയിശ", s: "F",m:12001,f:12000 ,a: [] },
+        { key: 12003, n: "സിദ്ധീഖ്", s: "M",m:12001,f:12000 ,a: [] },
+        { key: 12004, n: "നൂറ", s: "F",m:12001,f:12000 ,a: [] },
+        { key: 12005, n: "റംലത്ത്", s: "F",m:12001,f:12000, a: [] },
+        { key: 12006, n: "ഇസ്മായിൽ", s: "M",m:12001,f:12000, a: [] },
+
         { key: 200, n: "KP മമ്മദ്", s: "M", m: -11, f: -10,ux: 201, a: [] },
         { key: 201, n: "ബീവി", s: "F", a: [] },
 
