Adding ayishu parentes

--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
         { key: 12005, n: "റംലത്ത്", s: "F",m:12001,f:12000, a: [] },
         { key: 12006, n: "ഇസ്മായിൽ", s: "M",m:12001,f:12000, a: [] },
 
-        { key: 200, n: "KP മമ്മദ്", s: "M", m: -11, f: -10,ux: 201, a: [] },
-        { key: 201, n: "ബീവി", s: "F", a: [] },
+        { key: 200, n: "KP മമ്മദ്", s: "M",ux: 201, a: [] },
+        { key: 201, n: "ബീവി", s: "F", m: -11, f: -10,a: [] },
 
         { key: 4000, n: "അബൂബക്കർ", s: "M",ux:4001,m:201,f:200, a: [] },
-        { key: 4001, n: "അയിശു", s: "F", a: [] },
+        { key: 4001, n: "അയിശു", s: "F",m:101,f:100 ,a: [] },
         { key: 4002, n: "മൊയ്തു", s: "M", m:4001,f:4000,a: [] },
         { key: 4003, n: "സുലൈഖ", s: "F", m:4001,f:4000,a: [] },
 
